set( _headers
    algorithm/imagealgorithm.h
    classification/individuals.h
    classification/individuals_d.h
    classification/classifstrategy_d.h
    classification/classifstrategy.h
    classification/distance.h
    classification/distance_d.h
    classification/dynamicstrategy.h
    classification/dynamicstrategy_d.h
    classification/iterativeclassification.h
    classification/iterativeclassification_d.h
    classification/kmeansstrategy.h
    classification/kmeansstrategy_d.h
    classification/mixtureOfPpca.h
    classification/mixtureOfPpca_d.h
    classification/pcastrategy.h
    classification/pcastrategy_d.h
    classification/softDecSimilarityCompAnalysis.h
    compression/compression_g.h
    compression/huffman.h
    compression/lz.h
    compression/lzhl.h
    config/aimsalgo_config.h
    config/aimsalgopub_config.h
    connectivity/meshcc.h
    connectivity/meshcc_d.h
    distancemap/advection.h
    distancemap/distancemap_g.h
    distancemap/chamfer.h
    distancemap/danielsson.h
    distancemap/downpath.h
    distancemap/fastmarching.h
    distancemap/front.h
    distancemap/mask.h
    distancemap/meshdistance.h
    distancemap/meshdistance_d.h
    distancemap/meshmorphomat.h
    distancemap/meshmorphomat_d.h
    distancemap/meshvoronoi.h
    distancemap/meshvoronoi_d.h
    distancemap/meshparcellation.h
    distancemap/meshparcellation_d.h
    distancemap/stlsort.h
    distancemap/projection.h
    distancemap/thickness.h
    distancemap/voronoi.h
    estimation/estimation_g.h
    estimation/gmlfunc.h
    estimation/lms-estimator.h
    estimation/m-estimator.h
    estimation/m-func.h
    estimation/medfunc.h
    estimation/msfunc.h
    estimation/wlms-estimator.h
    fastComputation/tabulation.h
    ffd/tabulSpline.h
    foldgraph/foldgraphattributes.h
    foldgraph/foldoversegmentation.h
    geodesicpath/geodesic_algorithm_base.h
    geodesicpath/geodesic_algorithm_subdivision.h
    geodesicpath/geodesic_algorithm_dijkstra_alternative.h
    geodesicpath/geodesic_constants_and_simple_functions.h
    geodesicpath/geodesic_algorithm_dijkstra.h
    geodesicpath/geodesic_memory.h
    geodesicpath/geodesic_algorithm_exact_elements.h
    geodesicpath/geodesic_mesh_elements.h
    geodesicpath/geodesic_algorithm_exact.h
    geodesicpath/geodesic_mesh.h
    geodesicpath/geodesic_algorithm_graph_base.h
    geodesicpath/geodesicPath.h
    histogram/histogram_g.h
    histogram/cumulated.h
    histogram/histogram.h
    histogram/simpleHisto.h
    histogram/equalizedHisto.h
    histogram/regularBinnedHisto.h
    information/information.h
    information/pdf.h
#    information/mutualinfo.h
    interpolation/interpolatedvolume.h
    interpolation/interpolatedvolume_d.h
#    interpolation/splineleastsquare.h
    io/roiselectorR.h
    io/roigtmR.h
    io/roigtmW.h
    math/math_g.h
    math/balanc.h
    math/balbak.h
    math/bessel.h
    math/curv2Diso.h
    math/curv3Diso.h
    math/discriminantanalysis.h
    math/discriminantanalysis_d.h
    math/distspheric.h
    math/eigen.h
    math/elmhes.h
    math/eltran.h
    math/gaussj.h
    math/geometry.h
    math/gradient.h
    math/harris.h
    math/householder.h
    math/hqr.h
    math/hypergeometric.h
    math/knn.h
    math/multilinfit.h
    math/random.h
    math/svd.h
    math/pca.h
    math/pca_d.h
    math/ppca.h
    math/ppca_d.h
    math/bspline.h
    math/bspline2.h
    math/bspline3.h
    math/sobel.h
    math/tensorMatrix.h
    math/tqli.h
    mesh/mesh_g.h
    mesh/curv.h
    mesh/facet.h
    mesh/geometric.h
    mesh/inflate.h
    mesh/mesher.h
    mesh/meshinterpoler.h
    mesh/meshinterpoler_d.h
    mesh/meshinterpoler_p.h
    mesh/meshwatershed.h
    moment/geomMoment.h
    moment/momBase.h
    moment/momFactory.h
    moment/momIncStgy.h
    moment/momInvariant.h
    moment/momNormStgy.h
    moment/momStgy.h
    moment/momSurfStgy.h
    moment/momTriFactory.h
    moment/momTriStgy.h
    moment/momVolStgy.h
    moment/moment.h
    moment/moment_g.h
    moment/triMoment.h
    morphology/morphogreylevel_d.h
    morphology/morphology_g.h
    morphology/operatormorpho.h
    mpi/types.h
    neuralnet/multilayerperceptron.h
    neuralnet/selforganizingmap.h
    optimization/covsrt.h
    optimization/deterministic.h
    optimization/levmrq.h
    optimization/lm2gauss.h
    optimization/lmfunc.h
    optimization/lmgamma.h
    optimization/lmgauss.h
#   optimization/lmmultcompmodel.h
    optimization/objective.h
    optimization/optimization_g.h
    optimization/optimizer.h
    optimization/powell.h
    optimization/singleoptimizer.h
    perfusion/perfAif.h
    perfusion/perfAifAvg.h
    perfusion/perfAifBest.h
    perfusion/perfAifFactory.h
    perfusion/perfAifMatFactory.h
    perfusion/perfAifMatLinear.h
    perfusion/perfAifMatNoCorr.h
    perfusion/perfAifMatrix.h
    perfusion/perfAifMatStgy.h
    perfusion/perfAifPoints.h
    perfusion/perfAifSel.h
    perfusion/perfAifStgy.h
    perfusion/perfBBB.h
    perfusion/perfCBF.h
    perfusion/perfCBV.h
    perfusion/perfDeconv.h
    perfusion/perfDeconvFactory.h
    perfusion/perfDeconvStgy.h
    perfusion/perfDelay.h
    perfusion/perfFFTDeconv.h
    perfusion/perfFit.h
    perfusion/perfFitFactory.h
    perfusion/perfFitGammaVariate.h
    perfusion/perfFitStgy.h
    perfusion/perfGammaFit.h
    perfusion/perfH.h
    perfusion/perfLinFitGamma.h
    perfusion/perfMapBase.h
    perfusion/perfMaps.h
    perfusion/perfMask.h
    perfusion/perfMTT.h
    perfusion/perfNoFit.h
    perfusion/perfNoSmoothing.h
    perfusion/perfParam.h
    perfusion/perfPreInj.h
    perfusion/perfProcCenter.h
    perfusion/perfProcessing.h
    perfusion/perfQuantif.h
    perfusion/perfSkip.h
    perfusion/perfSmooth.h
    perfusion/perfSmoothBase.h
    perfusion/perfSmoothFactory.h
    perfusion/perfSmoothing2D.h
    perfusion/perfSmoothing3D.h
    perfusion/perfSmoothingT.h
    perfusion/perfSmoothStgy.h
    perfusion/perfSplitVol.h
    perfusion/perfSVDDeconv.h
    perfusion/perfSVDFactory.h
    perfusion/perfSVDInv.h
    perfusion/perfSVDStgy.h
    perfusion/perfSVDTikhoG.h
    perfusion/perfSVDTikho.h
    perfusion/perfSVDTrunc.h
    perfusion/perfTTP.h
    points_distribution/points_distribution.h
    primalsketch/dericheSmoother_d.h
    primalsketch/dericheSmoother.h
    primalsketch/peronaMalikSmoother_d.h
    primalsketch/peronaMalikSmoother.h
    primalsketch/finiteElementSmoother_d.h
    primalsketch/finiteElementSmoother.h
    primalsketch/greyLevelBlob.h
    primalsketch/scalespace.h
    primalsketch/scaleLevel.h
    primalsketch/smoother.h
    primalsketch/imageSmoother.h
    primalsketch/surfaceSmoother.h
    primalsketch/primalSketch.h
    primalsketch/scaleSpaceBlob.h
    primalsketch/primalSketch2graph.h
    primalsketch/primalSketchUtil.h
    primalsketch/coupledSmoother.h
    primalsketch/imageCoupledSmoother.h
    primalsketch/coupledDiffusion2DSmoother.h
    primalsketch/coupledDiffusion2DSmoother_d.h
    pyramid/maxfunc.h
    pyramid/meanfunc.h
    pyramid/medfunc.h
    pyramid/pyramid_g.h
    pyramid/pyramid.h
    pyramid/pyr-func.h
    pyramid/convolutionsubsampler.h
    pyramid/convolutionsubsampler_d.h
    pyramid/splinesubsampler.h
    pyramid/splinesubsampler_d.h
    pyramid/movingaveragesubsampler.h
    pyramid/splinepyramid.h
    pyramid/splinepyramid_d.h
    pyramid/subsamplingpyramid.h
    pyramid/subsamplingpyramid_d.h
    registration/block_matching.h
    registration/block_matching_d.h
    registration/displacement_field.h
    registration/displacement_field_d.h
    registration/ffd.h
    registration/minimisation.h
    registration/minimisation_d.h
    registration/scale_control.h
    registration/scale_control_d.h
    registration/transformation.h
    registration/transformation_d.h
    resampling/bucketmapsampler.h
    resampling/cubicresampler.h
    resampling/cubicresampler_d.h
    resampling/generalsampler.h
    resampling/harmonicCageResampler.h
    resampling/linearresampler.h
    resampling/linearresampler_d.h
    resampling/masklinresampler.h
    resampling/meshToVoxelsResampler.h
    resampling/meshToVoxelsResampler_d.h
    resampling/nearestneighborresampler.h
    resampling/nearestneighborresampler_d.h
    resampling/quadraticresampler.h
    resampling/quadraticresampler_d.h
    resampling/quarticresampler.h
    resampling/quarticresampler_d.h
    resampling/quinticresampler.h
    resampling/quinticresampler_d.h
    resampling/resampling_g.h
    resampling/resampler.h
    resampling/resampler_d.h
    resampling/resamplerfactory.h
    resampling/resamplerfactory_d.h
    resampling/extremadifferencesubsampling.h
    resampling/majoritysubsampling.h
    resampling/maxsubsampling.h
    resampling/meansubsampling.h
    resampling/mediansubsampling.h
    resampling/minsubsampling.h
    resampling/notnullmeansubsampling.h
    resampling/notnullmediansubsampling.h
    resampling/sumsubsampling.h
    resampling/multichannelresampler.h
    resampling/samplable.h
    resampling/samplable_cone.h
    resampling/samplable_sphere.h
    resampling/sampler.h
    resampling/sixthorderresampler.h
    resampling/sixthorderresampler_d.h
    resampling/seventhorderresampler.h
    resampling/seventhorderresampler_d.h
    resampling/splineresampler.h
    resampling/splineresampler_d.h
    resampling/subsamplingimagealgorithm.h
    resampling/polynomial.h
    roi/clusterArg.h
    roi/clusterArg_d.h
    roi/roigtm.h
    roi/roistat.h
    roi/roiselector.h
    scalespace/bucketblob.h
    scalespace/bucketblob_d.h
    scalespace/meshBlob.h
    scalespace/meshDiffuse.h
    signalfilter/signalfilter_g.h
    signalfilter/convol.h
    signalfilter/convolutionfilter.h
    signalfilter/convolutionfilter_d.h
    signalfilter/differencefilter.h
    signalfilter/diffusionSmoother_d.h
    signalfilter/diffusionSmoother.h
    signalfilter/elementfilterfactory.h
    signalfilter/elementfilterfactory_d.h
    signalfilter/filteringfunction.h
    signalfilter/filteringfunction_element.h
    signalfilter/filteringfunction_element_d.h
    signalfilter/filteringfunction_element_rgb.h
    signalfilter/filteringfunction_element_rgb_d.h
    signalfilter/filteringfunction_linear.h
    signalfilter/filteringfunction_linear_d.h
    signalfilter/filteringfunction_linear_rgb.h
    signalfilter/filteringfunction_linear_rgb_d.h
    signalfilter/filteringimagealgorithm.h
#    signalfilter/filter_nonlinear.h
#    signalfilter/filter_nonlinear_d.h
#    signalfilter/filter_linear.h
#    signalfilter/filter_linear_d.h
    signalfilter/firfilter.h
    signalfilter/g2dsmooth.h
    signalfilter/g3dsmooth.h
    signalfilter/gaborfilter.h
    signalfilter/gcoef.h
    signalfilter/gcolumns.h
    signalfilter/ghessian.h
    signalfilter/glines.h
    signalfilter/grecurse.h
    signalfilter/gslices.h
    signalfilter/parity.h
    signalfilter/gjacobian.h
    signalfilter/ggradient.h
    signalfilter/gframes.h
    signalfilter/medianfilter.h
    signalfilter/meanfilter.h
    signalfilter/minfilter.h
    signalfilter/maxfilter.h
    signalfilter/majorityfilter.h
    signalfilter/movingaveragefilter.h
    signalfilter/sumfilter.h
    signalfilter/variancefilter.h
    signalfilter/sdfilter.h
    signalfilter/iirfilter.h
    signalfilter/linearfilterfactory.h
    signalfilter/linearfilterfactory_d.h
    signalfilter/splinefilter.h
    signalfilter/splinefilter_d.h
    signalfilter/types.h
    signalfilter/vfilter.h
    spam/spam.h
    talairach/cramer.h
    talairach/talPoints.h
    talairach/talairach.h
    talairach/talACPCNorm.h
    talairach/talBoxBase.h
    talairach/talBox.h
    talairach/talVolume.h
    talairach/talBoundingBoxPoints.h
    threshold/emthreshold.h
    topology/adjacency.h
    topology/cc18adjacent.h
    topology/cc26adjacent.h
    topology/cc6adjacent.h
    topology/classifMeaning.h
    topology/components.h
    topology/components18.h
    topology/components26.h
    topology/connectivity18.h
    topology/connectivity26.h
    topology/connectivity6.h
    topology/relation.h
    topology/topoBase.h
    topology/topoClassif.h
    topology/topoClassifBase.h
    topology/topoClassifier.h
    topology/topology.h
    transform/fft1d.h
    transform/hilbert1d.h
    transform/least_square_estimation.h
    transform/rigidestimation.h
    utility/dynamic.h
    utility/dynamic_d.h
)

set( _sources
    classification/individuals.cc
    classification/classifstrategy.cc
    classification/distance.cc
    classification/dynamicstrategy.cc
    classification/iterativeclassification.cc
    classification/kmeansstrategy.cc
    classification/pcastrategy.cc
    classification/softDecSimilarityCompAnalysis.cc
    compression/huffman.cc
    compression/lz.cc
    connectivity/meshcc.cc
    distancemap/advection.cc
    distancemap/chamfer.cc
    distancemap/chamfermask.cc
    distancemap/chamfersweep.cc
    distancemap/danielsson.cc
    distancemap/downpath.cc
    distancemap/fastmarching.cc
    distancemap/front.cc
    distancemap/mask.cc
    distancemap/meshdistance.cc
    distancemap/meshvoronoi.cc
    distancemap/meshparcellation.cc
    distancemap/meshmorphomat.cc
    distancemap/projection.cc
    distancemap/thickness.cc
    distancemap/voronoi.cc
    fastComputation/tabulation.cc
    ffd/tabulSpline.cc
    foldgraph/foldgraphattributes.cc
    foldgraph/foldoversegmentation.cc
    geodesicpath/geodesicPath.cc
    information/corratio.cc
    information/meshdistance.cc
    information/mutual.cc
    information/pdf.cc
    interpolation/interpolatedvolume.cc
#    interpolation/splineleastsquare.cc
    io/roiselectorR.cc
    io/roigtmR.cc
    io/roigtmW.cc
    math/balanc.cc
    math/balbak.cc
    math/bessel.cc
    math/bspline.cc
    math/bspline3.cc
    math/bspline2.cc
    math/discriminantanalysis.cc
    math/eigen.cc
    math/elmhes.cc
    math/eltran.cc
    math/gaussj.cc
    math/geometry.cc
    math/harris.cc
    math/householder.cc
    math/hqr.cc
    math/hypergeometric.cc
    math/knn.cc
    math/icosahedronDistrib.cc
    math/multilinfit.cc
    math/randlist.cc
    math/random.cc
    math/spheredistrib.cc
    math/svd.cc
    math/pca.cc
    math/ppca.cc
    math/sobel.cc
    math/tensorMatrix.cc
    math/toeplitz.cc
    math/tqli.cc
    mesh/curv.cc
    mesh/decimation.cc
    mesh/extendedNeigh.cc
    mesh/facet.cc
    mesh/geometric.cc
    mesh/getBrain.cc
    mesh/inflate.cc
    mesh/mesher.cc
    mesh/meshinterpoler.cc
    mesh/meshwatershed.cc
    mesh/normals.cc
    mesh/reducedNeigh.cc
    mesh/smoothing.cc
    mesh/splitting.cc
    mesh/surf2facet.cc
    mesh/surface.cc
    mesh/triangles.cc
    mesh/vertices.cc
    mesh/voxel2facet.cc
    moment/momSurfStgy.cc
    moment/momTriFactory.cc
    moment/momTriStgy.cc
    moment/momVolStgy.cc
    moment/triMoment.cc
    morphology/morphoclose.cc
    morphology/morphodilate.cc
    morphology/morphoerode.cc
    morphology/morphogreylevel.cc
    morphology/morphoopen.cc
    neuralnet/multilayerperceptron.cc
    neuralnet/selforganizingmap.cc
    optimization/covsrt.cc
    optimization/levmrq.cc
    perfusion/perfAif.cc
    perfusion/perfAifAvg.cc
    perfusion/perfAifBest.cc
    perfusion/perfAifFactory.cc
    perfusion/perfAifMatFactory.cc
    perfusion/perfAifMatLinear.cc
    perfusion/perfAifMatNoCorr.cc
    perfusion/perfAifMatrix.cc
    perfusion/perfAifPoints.cc
    perfusion/perfAifSel.cc
    perfusion/perfBBB.cc
    perfusion/perfCBF.cc
    perfusion/perfCBV.cc
    perfusion/perfDeconv.cc
    perfusion/perfDeconvFactory.cc
    perfusion/perfDelay.cc
    perfusion/perfFFTDeconv.cc
    perfusion/perfFit.cc
    perfusion/perfFitFactory.cc
    perfusion/perfFitGammaVariate.cc
    perfusion/perfGammaFit.cc
    perfusion/perfH.cc
    perfusion/perfLinFitGamma.cc
    perfusion/perfMapBase.cc
    perfusion/perfMaps.cc
    perfusion/perfMask.cc
    perfusion/perfMTT.cc
    perfusion/perfNoFit.cc
    perfusion/perfParam.cc
    perfusion/perfPreInj.cc
    perfusion/perfProcCenter.cc
    perfusion/perfQuantif.cc
    perfusion/perfSkip.cc
    perfusion/perfSVDDeconv.cc
    perfusion/perfSVDFactory.cc
    perfusion/perfSVDInv.cc
    perfusion/perfSVDTikhoG.cc
    perfusion/perfSVDTikho.cc
    perfusion/perfSVDTrunc.cc
    perfusion/perfTTP.cc
    points_distribution/points_distribution.cc
    pyramid/splinesubsampler.cc
    pyramid/splinepyramid.cc
    pyramid/subsamplingpyramid.cc
    pyramid/movingaveragesubsampler.cc
    registration/block_matching.cc
    registration/displacement_field.cc
    registration/ffd.cc
    registration/minimisation.cc
    registration/scale_control.cc
    registration/transformation.cc
    resampling/bucketmapsampler.cc
    resampling/generalsampler.cc
    resampling/harmonicCageResampler.cc
    resampling/meshToVoxelsResampler.cc
    resampling/polynomial.cc
    resampling/resamplers.cc
    resampling/samplable.cc
    roi/clusterArg.cc
    roi/roigtm.cc
    roi/roistat.cc
    roi/roiselector.cc
    scalespace/bucketblob.cc
    scalespace/meshBlob.cc
    scalespace/meshDiffuse.cc
    signalfilter/diffusionSmoother.cc
    signalfilter/elementfilterfactory.cc
    signalfilter/filteringfunction_element.cc
    signalfilter/filteringfunction_element_rgb.cc
    signalfilter/filteringfunction_linear.cc
    signalfilter/filteringfunction_linear_rgb.cc
#    signalfilter/filter_nonlinear.cc
#    signalfilter/filter_linear.cc
    signalfilter/firfilter.cc
    signalfilter/gcoef.cc
    signalfilter/gcolumns.cc
    signalfilter/gframes.cc
    signalfilter/glines.cc
    signalfilter/grecurse.cc
    signalfilter/gslices.cc
    signalfilter/iirfilter.cc
    signalfilter/linearfilterfactory.cc
    signalfilter/movingaveragefilter.cc
    signalfilter/parity.cc
    signalfilter/splinefilter.cc
    spam/spam.cc
    talairach/cramer.cc
    talairach/talPoints.cc
    talairach/talairach.cc
    talairach/talACPCNorm.cc
    talairach/talBoxBase.cc
    topology/classifMeaning.cc
    topology/components.cc
    topology/components18.cc
    topology/components26.cc
    topology/connectivity18.cc
    topology/connectivity26.cc
    topology/connectivity6.cc
    topology/relation.cc
    topology/topoBase.cc
    topology/topoClassifBase.cc
    transform/fft1d.cc
    transform/hilbert1d.cc
    transform/xcor1d.cc
    transform/least_square_estimation.cc
    transform/rigidestimation.cc
    utility/dynamic.cc
)

BRAINVISA_COPY_AND_INSTALL_HEADERS( _headers aims headersTarget )
# GET HEADERS FOR DOXYGEN DOC
set(AIMSALGO_HEADERS ${_headers} PARENT_SCOPE)
add_library( aimsalgo SHARED ${_sources} )
add_dependencies( aimsalgo ${headersTarget} )
set_property( TARGET aimsalgo PROPERTY VERSION ${${PROJECT_NAME}_VERSION} )
target_link_libraries( aimsalgo aimsdata )
BRAINVISA_INSTALL( TARGETS aimsalgo
              DESTINATION lib
              COMPONENT ${PROJECT_NAME} )
