BRAINVISA_GET_FILE_LIST_FROM_PRO(  ${CMAKE_CURRENT_SOURCE_DIR}/gifti.pro "HEADERS" _headers "SOURCES" _sources )
BRAINVISA_COPY_AND_INSTALL_HEADERS( _headers aims headersTarget )
set(AIMSGIFTI_HEADERS ${_headers} PARENT_SCOPE)
include_directories( "${CMAKE_BINARY_DIR}/include/aims/io/gifticlib" "${CMAKE_BINARY_DIR}/include/soma-io/nifticlib/niftilib" "${CMAKE_BINARY_DIR}/include/soma-io/nifticlib/znzlib" ${EXPAT_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} )
add_definitions( "-DHAVE_ZLIB" )
add_library( aimsgifti MODULE ${_sources} )
add_dependencies( aimsgifti ${headersTarget} )
if( APPLE )
  set_property( TARGET aimsgifti PROPERTY OUTPUT_NAME aimsgifti.${${PROJECT_NAME}_VERSION} )
else()
  set_property( TARGET aimsgifti PROPERTY VERSION ${${PROJECT_NAME}_VERSION} )
endif()
target_link_libraries( aimsgifti ${AIMS_AIMSDATA_LIBRARIES} somanifti "${ZLIB_LIBRARIES}" ${EXPAT_LIBRARIES} )
BRAINVISA_INSTALL( TARGETS aimsgifti
DESTINATION lib
COMPONENT ${PROJECT_NAME} )
